finished adding the svg assets to the page

--- a/index.html
+++ b/index.html
@@ -7,30 +7,72 @@
 </head>
 <body>
     <div class="bar">
-        <a>Dashboard</a>
-        <div class="side">
-            <a>Home</a>
-            <a>Profile</a>
-            <a>Messages</a>
-            <a>History</a>
-            <a>Tasks</a>
-            <a>Communities</a>
+        <div class="main-logo">
+            <img src="assets/view-dashboard.svg" alt="Dashboard" =>
+            <a>Dashboard</a>
         </div>
         <div class="side">
-            <a>Settings</a>
-            <a>Support</a>
-            <a>Privacy</a>
+            <div>
+                <img src="assets/home.svg" alt="home" class="logo">
+                <a>Home</a>
+            </div>
+            <div>
+                <img src="assets/card-account-details-outline.svg" alt="profile" class="logo">
+                <a>Profile</a>
+            </div>
+            <div>
+                <img src="assets/message.svg" alt="message" class="logo">
+                <a>Messages</a>
+            </div>
+            <div>
+                <img src="assets/clock-time-seven.svg" alt="history" class="logo">
+                <a>History</a>
+            </div>
+            <div>
+                <img src="assets/file-multiple.svg" alt="task" class="logo">
+                <a>Tasks</a>
+            </div>
+            <div>
+                <img src="assets/account-group.svg" alt="com" class="logo">
+                <a>Communities</a>
+            </div>
+        </div>
+        <div class="side">
+            <div>
+                <img src="assets/cog.svg" alt="Settings" class="logo">
+                <a>Settings</a>
+            </div>
+            <div>
+                <img src="assets/help-rhombus-outline.svg" alt="Support" class="logo">
+                <a>Support</a>
+            </div>
+            <div>
+                <img src="assets/shield-check.svg" alt="Privacy" class="logo">
+                <a>Privacy</a>
+            </div>
         </div>
     </div>
     <div>
         <div class="header">
             <div>
-                <input type="text">
-                <p>Hi there.</p>
-                <p>Morgan Oakley (@morgan)</p>
+                <div class="search">
+                    <img src="assets/magnify.svg" alt="magnify" class="icon">
+                    <input type="text">
+                </div>
+                <div>
+                    <img src="assets/account-outline.svg" alt="account" class="account">
+                    <div>
+                        <p>Hi there.</p>
+                        <p>Morgan Oakley (@morgan)</p>
+                    </div>
+                </div>
             </div>
             <div>
-                <p>Morgan Oakley</p>
+                <div>
+                    <img src="assets/bell-ring-outline.svg" alt="bell" class="icon">
+                    <img src="assets/account-outline.svg" alt="account" class="account">
+                    <p>Morgan Oakley</p>
+                </div>
                 <button>New</button>
                 <button>Upload</button>
                 <button>Share</button>
@@ -41,28 +83,58 @@
                 <p>Your Projects</p>
                 <div class="projects">
                     <div>
-                        <p>hbgjhrrfhf</p>
-                        <p>fhuifhuifhjkdfhseizlerioizeropeizpdklsjfkdsfhjehjkzenfjkezhfdshfuiz</p>
+                        <p>Project</p>
+                        <p>Sed tempus ut lacus ut scelerisque.Suspendisse sollictudin nibh erat, id facilisis felis accumsan nec.</p>
+                        <div>
+                            <img src="assets/star-plus-outline.svg" alt="star" class="icon">
+                            <img src="assets/eye-plus-outline.svg" alt="eye" class="icon">
+                            <img src="assets/source-fork.svg" alt="fork" class="icon">
+                        </div>
                     </div>
                     <div>
-                        <p>hbgjhrrfhf</p>
-                        <p>fhuifhuifhjkdfhseizlerioizeropeizpdklsjfkdsfhjehjkzenfjkezhfdshfuiz</p>
+                        <p>Project</p>
+                        <p>Sed tempus ut lacus ut scelerisque.Suspendisse sollictudin nibh erat, id facilisis felis accumsan nec.</p>
+                        <div>
+                            <img src="assets/star-plus-outline.svg" alt="star" class="icon">
+                            <img src="assets/eye-plus-outline.svg" alt="eye" class="icon">
+                            <img src="assets/source-fork.svg" alt="fork" class="icon">
+                        </div>
                     </div>
                     <div>
-                        <p>hbgjhrrfhf</p>
-                        <p>fhuifhuifhjkdfhseizlerioizeropeizpdklsjfkdsfhjehjkzenfjkezhfdshfuiz</p>
+                        <p>Project</p>
+                        <p>Sed tempus ut lacus ut scelerisque.Suspendisse sollictudin nibh erat, id facilisis felis accumsan nec.</p>
+                        <div>
+                            <img src="assets/star-plus-outline.svg" alt="star" class="icon">
+                            <img src="assets/eye-plus-outline.svg" alt="eye" class="icon">
+                            <img src="assets/source-fork.svg" alt="fork" class="icon">
+                        </div>
                     </div>
                     <div>
-                        <p>hbgjhrrfhf</p>
-                        <p>fhuifhuifhjkdfhseizlerioizeropeizpdklsjfkdsfhjehjkzenfjkezhfdshfuiz</p>
+                        <p>Project</p>
+                        <p>Sed tempus ut lacus ut scelerisque.Suspendisse sollictudin nibh erat, id facilisis felis accumsan nec.</p>
+                        <div>
+                            <img src="assets/star-plus-outline.svg" alt="star" class="icon">
+                            <img src="assets/eye-plus-outline.svg" alt="eye" class="icon">
+                            <img src="assets/source-fork.svg" alt="fork" class="icon">
+                        </div>
                     </div>
                     <div>
-                        <p>hbgjhrrfhf</p>
-                        <p>fhuifhuifhjkdfhseizlerioizeropeizpdklsjfkdsfhjehjkzenfjkezhfdshfuiz</p>
+                        <p>Project</p>
+                        <p>Sed tempus ut lacus ut scelerisque.Suspendisse sollictudin nibh erat, id facilisis felis accumsan nec.</p>
+                        <div>
+                            <img src="assets/star-plus-outline.svg" alt="star" class="icon">
+                            <img src="assets/eye-plus-outline.svg" alt="eye" class="icon">
+                            <img src="assets/source-fork.svg" alt="fork" class="icon">
+                        </div>
                     </div>
                     <div>
-                        <p>hbgjhrrfhf</p>
-                        <p>fhuifhuifhjkdfhseizlerioizeropeizpdklsjfkdsfhjehjkzenfjkezhfdshfuiz</p>
+                        <p>Project</p>
+                        <p>Sed tempus ut lacus ut scelerisque.Suspendisse sollictudin nibh erat, id facilisis felis accumsan nec.</p>
+                        <div>
+                            <img src="assets/star-plus-outline.svg" alt="star" class="icon">
+                            <img src="assets/eye-plus-outline.svg" alt="eye" class="icon">
+                            <img src="assets/source-fork.svg" alt="fork" class="icon">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -70,36 +142,48 @@
                 <p>Anouncements</p>
                 <div class="anounce">
                     <div>
-                        <p>djidjzod</p>
-                        <p>iuehifjejifjfkezodkzeoiejfprezjfkldjfio</p>
+                        <p>Anouncement</p>
+                        <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libro.</p>
                     </div>
                     <div>
-                        <p>djidjzod</p>
-                        <p>iuehifjejifjfkezodkzeoiejfprezjfkldjfio</p>
+                        <p>Anouncement</p>
+                        <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libro.</p>
                     </div>
                     <div>
-                        <p>djidjzod</p>
-                        <p>iuehifjejifjfkezodkzeoiejfprezjfkldjfio</p>
+                        <p>Anouncement</p>
+                        <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libro.</p>
                     </div>
                 </div>
                 <div>
                     <p>Trending</p>
                     <div class="trending">
                         <div>
-                            <p>ifuieji</p>
-                            <p>efzfdsfsdfsdfze</p>
+                            <img src="assets/account-outline.svg" alt="account" class="account">
+                            <div>
+                                <p>@user</p>
+                                <p>super cool user</p>
+                            </div>
                         </div>
                         <div>
-                            <p>ifuieji</p>
-                            <p>efzfdsfsdfsdfze</p>
+                            <img src="assets/account-outline.svg" alt="account" class="account">
+                            <div>
+                                <p>@user</p>
+                                <p>super cool user</p>
+                            </div>
                         </div>
                         <div>
-                            <p>ifuieji</p>
-                            <p>efzfdsfsdfsdfze</p>
+                            <img src="assets/account-outline.svg" alt="account" class="account">
+                            <div>
+                                <p>@user</p>
+                                <p>super cool user</p>
+                            </div>
                         </div>
                         <div>
-                            <p>ifuieji</p>
-                            <p>efzfdsfsdfsdfze</p>
+                            <img src="assets/account-outline.svg" alt="account" class="account">
+                            <div>
+                                <p>@user</p>
+                                <p>super cool user</p>
+                            </div>
                         </div>
                     </div>
                 </div>
